fix: reuse Random instance and replace Collectors.toList() in AccountService